# vanetza-tests

./: CMakeLists.txt  local_endpoint_c_test.c  local_endpoint_test.cpp  raw_socket_bind.c  raw_socket_getsockname.c  raw_socket_hello.c  raw_socket_hello.cpp  raw_socket_ioctl.c  raw_socket_send_hello.c  raw_socket_test.cpp
